fixes "Latest News" link margin on mobile Homepage

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -49,6 +49,10 @@
     &__section {
       padding: 24px 0;
     }
+
+    &__link {
+      margin: 2rem auto;
+    }
   }
 }
 
